--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     background-color: #ffffff;
     color: #000000;
+    font-family: 'Comic Sans MS', cursive, sans-serif; /* Voeg deze regel toe */
 }
 
 body.dark-mode {
